<resources>
    <string name="app_name">5&#8211;3&#8211;1 Tracker</string>
    <string name="app_package">com.example.a531tracker</string>
    <string name="app_header">5/3/1 BBB Tracker</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Account Settings</string>
    <string name="nav_upload">Upload Lifts</string>
    <string name="nav_upload_home">Reset Lifts</string>
    <string name="nav_upload_week">Submit AMRAP</string>
    <string name="nav_update">Update your training max</string>
    <string name="nav_info">More Info</string>
    <string name="nav_help">Contact Us</string>
    <string name="nav_joker">Add Joker Set</string>
    <string name="ok_text">OK</string>
    <string name="breakdown_bar_weight">Bar Weight: </string>
    <string name="breakdown_added_weight_start">Add (L/R): </string>
    <string name="workout_show_breakdown">Show Breakdown</string>
    <string name="workout_hide_breakdown">Hide breakdown</string>
    <string name="amrap_reps_completed">Reps completed on the last set</string>
    <string name="amrap_last_week">Last week\'s reps: </string>
    <string name="amrap_this_week">This week\'s reps: </string>
    <string name="amrap_no_value_error">You must submit a number</string>
    <string name="amrap_success">You have successfully submitted your rep value</string>
    <string name="amrap_error">An error has occurred; please try again later</string>
    <string name="home_page_tab">HOME</string>
    <string name="update_cycle_tag">LIFT TOOLS</string>
    <string name="homepage_go_to_week">View this Week</string>
    <string name="extras_disabled">Uncheck the "Remove All Extras" setting to use this tool.</string>
    <string name="joker_set">Joker Set</string>
    <string name="completed_weeks">Completed Weeks</string>
    <string name="current_tm">Current training max: </string>
    <string name="new_user_explanation_opening">Thanks for downloading 531-Fitness! Before you get started, here\'s a quick overview of the 5/3/1 program so you can utilize this app to fit your needs.</string>
    <string name="new_user_explanation_bulk_one">5/3/1 is a strength training program that takes your 1RM (one-rep max), or the maximum weight you can move for one repetition, for the four compound lifts (Bench press, Overhand Press,
        and a Squat and Deadlift variant) and uses a percentage of it as your training max. </string>
    <string name="new_user_explanation_bulk_two">Each week involves a percentage of that training max and is broken down into three parts: 3 Warm–Up sets, 3 "Core" sets, and an optional 3&#8211;5 Extra sets.
        The last set of each core block requires you to do "as many reps as possible" (AMRAP) at that weight until you feel close to failure, but not failing.</string>
    <string name="new_user_explanation_button">To progress using this app, you must press this button to the left for each week and record your AMRAP for that week.</string>
    <string name="new_user_explanation_closing">When you are ready, press the button below to continue to enter your 1RM or training max for the program.</string>
    <string name="new_user_continue">Continue</string>
    <string name="new_user_submit_lifts">Enter your lifts</string>
    <string name="bottom_dialog_tools_cycle_header">Update the Cycle</string>
    <string name="bottom_dialog_tools_cycle_cycle_text">Cycle</string>
    <string name="bottom_dialog_tools_current_values">Current Max</string>
    <string name="bottom_dialog_tools_update_values">After Updating</string>
    <string name="bottom_dialog_tools_confirm_update">Confirm and Update</string>
    <string name="bottom_dialog_tools_error">You must submit "As Many Reps As Possible" using the orange button on the week screen for each week before updating the cycle.</string>
    <string name="bottom_dialog_joker_header">Add a Joker set</string>
    <string name="bottom_dialog_joker_one">Add a 1x1 set</string>
    <string name="bottom_dialog_joker_three">Add a 1x3 set</string>
    <string name="bottom_dialog_joker_five">Add a 1x5 set</string>
    <string name="bottom_dialog_joker_alt_three">Add a 1x3 set</string>
    <string name="bottom_dialog_joker_alt_six">Add a 1x6 set</string>
    <string name="bottom_dialog_joker_alt_eight">Add a 1x8 set</string>
    <string name="lift_graph_header">Compound Graphs</string>
    <string name="lift_graph_empty_state">You can track your cycle stats here after you\'ve finished your first cycle.</string>
    <string name="lift_tools_fragment_header">All Tools</string>
    <string name="lift_tools_fragment_current_cycle_header">Current Cycle:</string>
    <string name="lift_tools_fragment_update_cycle">Update the Cycle</string>
    <string name="lift_tools_fragment_change_lift_percent">Update "Boring But Big" Percents</string>
    <string name="lift_tools_fragment_update_lift_percent">Update "Boring But Big" Percent</string>
    <string name="lift_tools_fragment_update_lift_tms">Update Training Maxes</string>
    <string name="lift_tools_fragment_current">Current Max</string>
    <string name="lift_tools_fragment_updated">After Updating</string>
    <string name="lift_tools_update_percent_success">Boring But Big percents updated</string>
    <string name="lift_tools_update_all_success">You\'ve moved onto the next cycle. Good job!</string>
    <string name="lift_header">Set Lift Data</string>
    <string name="lift_one_rep_max">What are your one rep maxes?</string>
    <string name="lift_one_rep_max_explanation">Enter your one rep maxes (ORM). If you already know your training max, check the box below before submitting. These values can always be adjusted later.</string>
    <string name="lift_lbs">LB</string>
    <string name="lift_kg">KG</string>
    <string name="lift_bench_text">Bench</string>
    <string name="lift_squat_text">Squat</string>
    <string name="lift_dl_text">Deadlift</string>
    <string name="lift_ohp_text">Overhand Press</string>
    <string name="lift_bbb_text">Boring But Big Percents (30%-90%)</string>
    <string name="lift_bbb_seekbar_header">Currently at </string>
    <string name="lift_bbb_seek_value">30.0</string>
    <string name="lift_bbb_seek_footer">% of the training max</string>
    <string name="lift_hide_bbb">Disable Boring But Big inputs and extra lifts.\nThis can always be changed on the Settings page.</string>
    <string name="lift_known_maxes">I know my training maxes</string>
    <string name="lift_submit">Submit</string>
    <string name="preference_base_options_title">Base Options</string>
    <string name="preference_kilogram">Display weight in Kilograms (KG)</string>
    <string name="preference_kilogram_key">user_pref_kilo_key</string>
    <string name="preference_week_options">Deload Options</string>
    <string name="preference_week_four_cycle">7 Week Cycle</string>
    <string name="preference_week_four_cycle_desc">Two cycles are combined.\nEvery 7th week is a deload Week. Disable to have a deload week every 4th week.</string>
    <string name="preference_week_options_key">user_pref_week_key</string>
    <string name="preference_split_variant_extra">Change to the 8/6/3 format</string>
    <string name="preference_split_variant_extra_desc">The 8/6/3 format lowers the percents down to 80%/85%/90%, respectively, for that week.</string>
    <string name="preference_split_variant_extra_key">user_pref_split_key</string>
    <string name="preference_extras_title">Extra Set Modifiers</string>
    <string name="preference_extras_desc">Pick and choose how you want your workout!</string>
    <string name="preference_fsl">First Set Last (FSL)</string>
    <string name="preference_fsl_desc">Do the first set of the day again for as many reps as possible or for 3&#8211;4 sets at a set amount. Overrides and replaces current extra sets.</string>
    <string name="preference_fsl_key">user_pref_fsl_key</string>
    <string name="preference_joker">Add Joker Sets</string>
    <string name="preference_joker_desc">If you feel like you can continue going after your core sets, try Joker Sets. Add an extra 5% to your last core set for another 5, 3, or 1 reps, and continue until you feel satisfied!</string>
    <string name="preference_joker_key">user_pref_joker_key</string>
    <string name="preference_deload">Deload Week Sets</string>
    <string name="preference_deload_desc">Add extra sets (that are lighter) during Deload Week</string>
    <string name="preference_deload_key">user_pref_deload_key</string>
    <string name="preference_swap_extras">Swap Extra Sets</string>
    <string name="preference_swap_extras_desc">During your extra sets (BBB or FSL), swap to a complimentary compound workout.</string>
    <string name="preference_swap_extras_key">user_pref_swap_extras_key</string>
    <string name="preference_remove_extras">Remove All Extras</string>
    <string name="preference_remove_extras_desc">Removes all FSL &amp; BBB other variants; Joker Sets and 8/6/3 will function normally.</string>
    <string name="preference_remove_extras_key">user_pref_remove_extras_key</string>
    <string name="preference_bbb_title">Boring But Big Percents</string>
    <string name="preference_bbb_desc"> </string>
    <string name="preference_bbb_key">user_pref_bbb_percent_key</string>
    <string name="preference_data_title">Data Deletion</string>
    <string name="preference_data_deletion">Data Deletion</string>
    <string name="preference_data_deletion_desc">Below, you can delete all your current data.\nThis will reset the cycle to 0 and remove all your saved data.\nThis is permanent and cannot be undone. </string>
    <string name="preference_data_deletion_key">user_pref_data_delete_key</string>
    <string name="pref_delete_alert_warning">This is the only warning: pressing yes will delete all of your saved data and restart the app.\n\nAre you sure you want to delete all of your data?</string>
    <string name="pref_delete_alert_title">Delete All Data</string>
    <string name="pref_delete_alert_ok">@android:string/ok</string>
    <string name="pref_delete_alert_cancel">@android:string/cancel</string>
    <string name="bench">Bench Press</string>
    <string name="overhand">Military Press</string>
    <string name="deadlift">Deadlift</string>
    <string name="squat">Squat</string>
    <string name="upper_body_compounds">Upper Body 1-Rep-Max</string>
    <string name="lower_body_compounds">Lower Body 1-Rep-Max</string>
    <string name="bbb_set_maxes">Boring But Big Values</string>
    <string name="set_max_info">Enter the values for your 1 Rep Maxes (1RM) below. We recommend that you round to the nearest 0 or 5 for
        in-between values. If you do not know your 1RM values, test for them first. \n\nIf you already know your Training Max,
        check the box below before submitting your values.</string>
    <string name="training_maxes_input">I already know my training maxes</string>
    <string name="training_maxes_using_kg">Check here if you are using Kilograms</string>
    <string name="bench_placeholder">90</string>
    <string name="overhand_placeholder">45</string>
    <string name="deadlift_placeholder">135</string>
    <string name="squat_placeholder">120</string>
    <string name="workout_name">Workout</string>
    <string name="workout_weight">Weight</string>
    <string name="workout_reps">Sets &amp; Reps</string>
    <string name="placeholder_reps">15x10</string>
    <string name="placeholder_workout">Workout Name</string>
    <string name="add_accessories_button">Add Accessories</string>
    <string name="cancel_text">Cancel</string>
    <string name="cycle_placeholder">Cycle 0</string>
    <string name="cycle_update">Update to the next Cycle</string>
    <string name="button_bench">View Bench Press Week</string>
    <string name="button_deadlift">View Deadlift Week</string>
    <string name="button_press">View Military Press Week</string>
    <string name="button_squat">View Squat Week</string>
</resources>