<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navyBlue"
    tools:context=".HomeScreen">

    <FrameLayout
        android:id="@+id/top_frame_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/navigation" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorWhiteDark"
        app:layout_constraintTop_toBottomOf="@id/top_frame_home"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="16dp">

            <TextView
                android:id="@+id/cycle_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/workout_frame_32"
                android:gravity="center"
                android:text="@string/cycle_placeholder"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_20"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/increase_training_max"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_margin="@dimen/workout_frame_16"
                android:background="@drawable/test"
                android:padding="@dimen/workout_frame_padding"
                android:text="@string/cycle_update"
                android:textColor="@drawable/view_lifts_buttons_text"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cycle_display"
                app:layout_constraintEnd_toStartOf="@id/bbb_test"/>

            <Button
                android:id="@+id/bbb_test"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_margin="@dimen/workout_frame_16"
                android:background="@drawable/test"
                android:padding="@dimen/workout_frame_padding"
                android:text="BBB Test"
                android:textColor="@drawable/view_lifts_buttons_text"
                android:textSize="@dimen/text_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cycle_display"
                app:layout_constraintStart_toEndOf="@id/increase_training_max"/>

            <Button
                android:id="@+id/addAccessoriesButton"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:layout_marginTop="@dimen/workout_frame_32"
                android:background="@drawable/main_buttons"
                android:padding="15dp"
                android:text="@string/add_accessories_button"
                android:textColor="@drawable/main_buttons_text_colors"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/press_numbers"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_margin="@dimen/workout_frame_16"
                android:background="@drawable/test"
                android:padding="@dimen/workout_frame_padding"
                android:text="@string/button_press"
                android:textColor="@drawable/view_lifts_buttons_text"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bbb_test"
                app:layout_constraintEnd_toStartOf="@id/deadlift_numbers"/>

            <Button
                android:id="@+id/deadlift_numbers"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_margin="@dimen/workout_frame_16"
                android:background="@drawable/test"
                android:padding="@dimen/workout_frame_padding"
                android:text="@string/button_deadlift"
                android:textColor="@drawable/view_lifts_buttons_text"
                android:textSize="@dimen/text_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bbb_test"
                app:layout_constraintStart_toEndOf="@id/press_numbers"/>

            <Button
                android:id="@+id/bench_numbers"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_margin="@dimen/workout_frame_16"
                android:background="@drawable/test"
                android:padding="@dimen/workout_frame_padding"
                android:text="@string/button_bench"
                android:textColor="@drawable/view_lifts_buttons_text"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/press_numbers"
                app:layout_constraintEnd_toStartOf="@id/squat_numbers"/>

            <Button
                android:id="@+id/squat_numbers"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_margin="@dimen/workout_frame_16"
                android:background="@drawable/test"
                android:padding="@dimen/workout_frame_padding"
                android:text="@string/button_squat"
                android:textColor="@drawable/view_lifts_buttons_text"
                android:textSize="@dimen/text_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/deadlift_numbers"
                app:layout_constraintStart_toEndOf="@id/bench_numbers"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>