<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/workout_frame_padding_half"
    android:paddingLeft="@dimen/workout_frame_padding_half"
    android:paddingRight="@dimen/workout_frame_padding_half"
    android:background="@color/colorBlack"
    tools:context=".Week" >

        <TextView
            android:id="@+id/compoundLiftTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/workout_frame_32"
            android:layout_marginTop="@dimen/workout_frame_top"
            android:layout_marginBottom="@dimen/workout_frame_top"
            android:paddingLeft="@dimen/workout_frame_padding"
            android:paddingRight="@dimen/workout_frame_padding"
            android:textSize="@dimen/text_16"
            android:text="@string/workout_name"
            android:textColor="@color/colorRed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/compoundWeightTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/workout_frame_32"
            android:layout_marginEnd="@dimen/workout_frame_32"
            android:layout_marginTop="@dimen/workout_frame_top"
            android:layout_marginBottom="@dimen/workout_frame_top"
            android:paddingLeft="@dimen/workout_frame_padding"
            android:paddingRight="@dimen/workout_frame_padding"
            android:textSize="@dimen/text_16"
            android:text="@string/workout_weight"
            android:textColor="@color/colorRed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/compoundRepsTitle"
            app:layout_constraintStart_toEndOf="@+id/compoundLiftTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/compoundRepsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/workout_frame_top"
            android:layout_marginEnd="@dimen/workout_frame_32"
            android:layout_marginBottom="@dimen/workout_frame_top"
            android:paddingLeft="@dimen/workout_frame_padding"
            android:paddingRight="@dimen/workout_frame_padding"
            android:textSize="@dimen/text_16"
            android:text="@string/workout_reps"
            android:textColor="@color/colorRed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorRed"
            app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>